--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,33 @@
 [package]
 name = "tea"
 version = "0.1.0"
+description = "Terminal-typing Exercise Application"
+authors = ["David Park <dpjungmin@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/dpjungmin/tea"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+rust-version = "1.70"
 
 [dependencies]
+anyhow = "1.0"
+crossterm = "0.26"
+tokio = { version = "1", features = ["full"] }
+tui = "0.19"
+
+[[bin]]
+name = "tea"
+path = "src/main.rs"
+test = false
+doctest = false
+
+[profile.release]
+opt-level = 3
+debug = false
+strip = "debuginfo"
+debug-assertions = false
+overflow-checks = false
+lto = "fat"
+panic = "unwind"
+incremental = false
+codegen-units = 1
+build-override = { opt-level = 3 }
